--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,6 @@
 /**app.wxss**/
-.container {
+@import "/static/iconfont/iconfont.wxss";
+page {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+}
+
