--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -27,3 +27,44 @@
   border-bottom-right-radius: 25rpx;
   border-top-left-radius: 25rpx;
 }
+
+/* 导航区域 */
+.navContainer {
+  display: flex;
+}
+
+.scroll-view_H{
+  /* display: flex;
+  flex-direction: row; */
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+}
+
+
+.navItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid red;
+  margin: 0 25rpx;
+  padding: 0 10rpx;
+}
+
+.navItem .iconfont {
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 100rpx;
+  font-size: 50rpx;
+  background: rgb(248, 230, 230);
+  color: rgb(240, 19, 19);
+  margin: 10rpx 0;
+}
+
+.navItem text {
+  font-size: 24rpx;
+}
