--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,47 +9,61 @@
       </swiper-item>
     </swiper>
   </view>
-  <!-- 导航区域 -->
+  <!-- 导航区域1 -->
   <view class="navContainer">
-    <scroll-view class="scroll-view_H" scroll-x="true" bindscroll="scroll" style="width: 100%">
-      <viex class="nav">
-        <view class="navItem " bindtap="toRecommendSong">
-          <text class="iconfont icon-meirituijian"></text>
-          <text>每日推荐</text>
-        </view>
-        <view class="navItem" bindtap="toOther">
-          <text class="iconfont icon-gedan1"></text>
-          <text>私人FM</text>
-        </view>
-        <view class="navItem">
-          <text class="iconfont icon-icon-ranking"></text>
-          <text>歌单1</text>
-        </view>
-        <view class="navItem">
-          <text class="iconfont icon-icon-ranking"></text>
-          <text>排行榜</text>
-        </view>
-        <view class="navItem">
-          <text class="iconfont icon-diantai"></text>
-          <text>直播</text>
-        </view>
-        <view class="navItem">
-          <text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
-          <text>数字专辑</text>
-        </view>
-        <view class="navItem">
-          <text class="iconfont icon-icon-ranking"></text>
-          <text>助眠解压</text>
-        </view>
-        <view class="navItem">
-          <text class="iconfont icon-diantai"></text>
-          <text>歌房</text>
-        </view>
-        <view class="navItem">
-          <text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
-          <text>游戏专区</text>
-        </view>
-      </viex>
+    <scroll-view class="scroll-view_H" enable-flex scroll-x>
+      <view class="navItem ">
+        <text class="iconfont icon-meirituijian"></text>
+        <text>每日推荐</text>
+      </view>
+      <view class="navItem">
+        <text class="iconfont icon-gedan1"></text>
+        <text>私人FM</text>
+      </view>
+      <view class="navItem">
+        <text class="iconfont icon-icon-ranking"></text>
+        <text>歌单1</text>
+      </view>
+      <view class="navItem">
+        <text class="iconfont icon-icon-ranking"></text>
+        <text>排行榜</text>
+      </view>
+      <view class="navItem">
+        <text class="iconfont icon-diantai"></text>
+        <text>直播</text>
+      </view>
+      <view class="navItem">
+        <text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
+        <text>数字专辑</text>
+      </view>
+      <view class="navItem">
+        <text class="iconfont icon-icon-ranking"></text>
+        <text>助眠解压</text>
+      </view>
+      <view class="navItem">
+        <text class="iconfont icon-diantai"></text>
+        <text>歌房</text>
+      </view>
+      <view class="navItem">
+        <text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
+        <text>游戏专区</text>
+      </view>
     </scroll-view>
   </view>
+  <!-- 推荐歌曲区域 -->
+  <view class="recommendContainer">
+    <!-- 头部区域 -->
+    <NavHeader title="推荐歌曲" nav="为你精心准备"></NavHeader>
+    <!-- 内容区域 -->
+    <scroll-view class="recommendScroll" enable-flex scroll-x>
+      <!-- <view class="recommendCon"> -->
+      <view class="scrollItem" wx:for="{{recommendList}}" wx:key="id" wx:for-item="recommendItem">
+        <image src="{{recommendItem.picUrl}}"></image>
+        <text>{{recommendItem.name}}</text>
+      </view>
+      <!-- </view> -->
+    </scroll-view>
+  </view>
+
+
 </view>
