feat(index): 排行榜

--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -95,3 +95,50 @@
   -webkit-box-orient: vertical; /*设置对其模式*/
   -webkit-line-clamp: 2; /*设置多行的行数*/
 }
+
+/* 排行榜 */
+.topList {
+  padding: 20rpx;
+}
+
+.topListSwiper {
+  height: 400rpx;
+}
+
+.swiperItem {
+  width: 96%;
+  background: #fbfbfb;
+}
+
+.swiperItem .title {
+  font-size: 30rpx;
+  line-height: 80rpx;
+}
+
+.musicItem {
+  /* 当一个元素设置为flex， 其子元素会自动变成block元素 */
+  display: flex;
+  margin-bottom: 20rpx;
+}
+
+.musicItem image {
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 6rpx;
+}
+
+.musicItem .count {
+  width: 100rpx;
+  height: 100rpx;
+  text-align: center;
+  line-height: 100rpx;
+}
+
+.musicItem .musicName {
+  height: 100rpx;
+  line-height: 100rpx;
+  max-width: 400rpx;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
