--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,69 +1,89 @@
 <!-- index.wxml -->
 <view class="indexContainer">
-  <!-- 轮播图 -->
-  <view class="bannerContainer">
-    <swiper class="banners" indicator-dots autoplay circular snap-to-edge="True">
-      <swiper-item class="bannerItem" wx:for="{{bannerList}}" wx:key="bannerId">
-        <image src="{{item.pic}}" />
-        <view class="typeTitle" style="background:{{item.titleColor}}">{{item.typeTitle}}</view>
-      </swiper-item>
-    </swiper>
-  </view>
-  <!-- 导航区域1 -->
-  <view class="navContainer">
-    <scroll-view class="scroll-view_H" enable-flex scroll-x>
-      <view class="navItem ">
-        <text class="iconfont icon-meirituijian"></text>
-        <text>每日推荐</text>
-      </view>
-      <view class="navItem">
-        <text class="iconfont icon-gedan1"></text>
-        <text>私人FM</text>
-      </view>
-      <view class="navItem">
-        <text class="iconfont icon-icon-ranking"></text>
-        <text>歌单1</text>
-      </view>
-      <view class="navItem">
-        <text class="iconfont icon-icon-ranking"></text>
-        <text>排行榜</text>
-      </view>
-      <view class="navItem">
-        <text class="iconfont icon-diantai"></text>
-        <text>直播</text>
-      </view>
-      <view class="navItem">
-        <text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
-        <text>数字专辑</text>
-      </view>
-      <view class="navItem">
-        <text class="iconfont icon-icon-ranking"></text>
-        <text>助眠解压</text>
-      </view>
-      <view class="navItem">
-        <text class="iconfont icon-diantai"></text>
-        <text>歌房</text>
-      </view>
-      <view class="navItem">
-        <text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
-        <text>游戏专区</text>
-      </view>
-    </scroll-view>
-  </view>
-  <!-- 推荐歌曲区域 -->
-  <view class="recommendContainer">
-    <!-- 头部区域 -->
-    <NavHeader title="推荐歌曲" nav="为你精心准备"></NavHeader>
-    <!-- 内容区域 -->
-    <scroll-view class="recommendScroll" enable-flex scroll-x>
-      <!-- <view class="recommendCon"> -->
-      <view class="scrollItem" wx:for="{{recommendList}}" wx:key="id" wx:for-item="recommendItem">
-        <image src="{{recommendItem.picUrl}}"></image>
-        <text>{{recommendItem.name}}</text>
-      </view>
-      <!-- </view> -->
-    </scroll-view>
-  </view>
+	<!-- 轮播图 -->
+	<view class="bannerContainer">
+		<swiper class="banners" indicator-dots autoplay circular snap-to-edge="True">
+			<swiper-item class="bannerItem" wx:for="{{bannerList}}" wx:key="bannerId">
+				<image src="{{item.pic}}" />
+				<view class="typeTitle" style="background:{{item.titleColor}}">{{item.typeTitle}}</view>
+			</swiper-item>
+		</swiper>
+	</view>
+	<!-- 导航区域1 -->
+	<view class="navContainer">
+		<scroll-view class="scroll-view_H" enable-flex scroll-x>
+			<view class="navItem ">
+				<text class="iconfont icon-meirituijian"></text>
+				<text>每日推荐</text>
+			</view>
+			<view class="navItem">
+				<text class="iconfont icon-gedan1"></text>
+				<text>私人FM</text>
+			</view>
+			<view class="navItem">
+				<text class="iconfont icon-icon-ranking"></text>
+				<text>歌单1</text>
+			</view>
+			<view class="navItem">
+				<text class="iconfont icon-icon-ranking"></text>
+				<text>排行榜</text>
+			</view>
+			<view class="navItem">
+				<text class="iconfont icon-diantai"></text>
+				<text>直播</text>
+			</view>
+			<view class="navItem">
+				<text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
+				<text>数字专辑</text>
+			</view>
+			<view class="navItem">
+				<text class="iconfont icon-icon-ranking"></text>
+				<text>助眠解压</text>
+			</view>
+			<view class="navItem">
+				<text class="iconfont icon-diantai"></text>
+				<text>歌房</text>
+			</view>
+			<view class="navItem">
+				<text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
+				<text>游戏专区</text>
+			</view>
+		</scroll-view>
+	</view>
+	<!-- 推荐歌曲区域 -->
+	<view class="recommendContainer">
+		<!-- 头部区域 -->
+		<NavHeader title="推荐歌曲" nav="为你精心准备"></NavHeader>
+		<!-- 内容区域 -->
+		<scroll-view class="recommendScroll" enable-flex scroll-x>
+			<!-- <view class="recommendCon"> -->
+			<view class="scrollItem" wx:for="{{recommendList}}" wx:key="id" wx:for-item="recommendItem">
+				<image src="{{recommendItem.picUrl}}"></image>
+				<text>{{recommendItem.name}}</text>
+			</view>
+			<!-- </view> -->
+		</scroll-view>
+	</view>
 
+	<!-- 排行榜区域 -->
+	<view class="topList">
+		<!-- 头部区域 -->
+		<NavHeader title="排行榜" nav="热歌风向标"></NavHeader>
+
+    <!-- 内容区域 -->
+		<swiper class="topListSwiper"  circular next-margin="50rpx" previous-margin="50rpx">
+			<swiper-item wx:for="{{topList}}" wx:key="name">
+				<view class="swiperItem">
+          <view class="title">{{item.name}}</view>
+          <view class="musicItem" wx:for="{{item.tracks}}" wx:key="id" wx:for-item="musicItem">
+            <image src="{{musicItem.al.picUrl}}" lazy-load="false"/>
+            <text class="count">{{index + 1}}</text>
+            <text class="musicName">{{musicItem.name}}</text>
+              
+          </view>
+        </view>
+			</swiper-item>
+		</swiper>
+	</view>
 
 </view>
