--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,7 +12,7 @@
 	<!-- 导航区域1 -->
 	<view class="navContainer">
 		<scroll-view class="scroll-view_H" enable-flex scroll-x>
-			<view class="navItem ">
+			<view class="navItem"  bindtap="toRecommendSong">
 				<text class="iconfont icon-meirituijian"></text>
 				<text>每日推荐</text>
 			</view>
