--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -1,2 +1,26 @@
 <!--pages/personal.wxml-->
-<text>pages/personal.wxml</text>
+<view class="personalContainer">
+  <view class="user-section">
+    <image class="bg" src="/static/images/personal/bgImg2.jpg"></image>
+    <view class="user-info-box">
+      <view class="portrait-box">
+        <image class="portrait" src="/static/images/personal/missing-face.png"></image>
+      </view>
+      <view class="info-box">
+        <text class="username">游客</text>
+      </view>
+    </view>
+
+    <view class="vip-card-box">
+      <image class="card-bg" src="/static/image/personal/vip-card-bg.png"></image>
+      <view class="b-btn">立即开通</view>
+      <view class="tit">
+        <!-- 会员图标 -->
+        <text class="iconfont icon=huiyuan-"></text>
+        vip会员
+      </view>
+      <text class="e-m">网抑云音乐</text>
+      <text class="e-b">开通会员听歌，撸代码</text>
+    </view>
+  </view>
+</view>
