--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -1,1 +1,44 @@
 /* pages/personal.wxss */
+
+.personalContainer {
+  width: 100%;
+  height: 100%;
+}
+
+.personalContainer .user-section {
+  position: relative;
+  padding: 100rpx 30rpx 0;
+  height: 520rpx;
+  /* border: 1px solid red; */
+}
+
+.user-section .bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  filter: blur(1px);
+}
+
+.user-info-box {
+  height: 180rpx;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+}
+
+.user-info-box .portrait {
+  width: 130rpx;
+  height: 130rpx;
+  border: 5rpx solid #fff;
+  border-radius: 50%;
+}
+
+.user-info-box .username {
+  font-size: 24;
+  color: #303133;
+  margin-left: 20rpx;
+}
