--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -1,26 +1,83 @@
 <!--pages/personal.wxml-->
 <view class="personalContainer">
-  <view class="user-section">
-    <image class="bg" src="/static/images/personal/bgImg2.jpg"></image>
-    <view class="user-info-box">
-      <view class="portrait-box">
-        <image class="portrait" src="/static/images/personal/missing-face.png"></image>
-      </view>
-      <view class="info-box">
-        <text class="username">游客</text>
-      </view>
-    </view>
+	<view class="user-section">
+		<image class="bg" src="/static/images/personal/bgImg2.jpg"></image>
+		<view class="user-info-box">
+			<view class="portrait-box">
+				<image class="portrait" src='{{userInfo.avatarUrl?userInfo.avatarUrl:"/static/images/personal/missing-face.png"}}'></image>
+			</view>
+			<view class="info-box">
+				<text class="username">{{userInfo.nickname?userInfo.nickname:'游客'}}</text>
+			</view>
+		</view>
 
-    <view class="vip-card-box">
-      <image class="card-bg" src="/static/image/personal/vip-card-bg.png"></image>
-      <view class="b-btn">立即开通</view>
-      <view class="tit">
-        <!-- 会员图标 -->
-        <text class="iconfont icon=huiyuan-"></text>
-        vip会员
-      </view>
-      <text class="e-m">网抑云音乐</text>
-      <text class="e-b">开通会员听歌，撸代码</text>
-    </view>
-  </view>
+		<view class="vip-card-box">
+			<image class="card-bg" src="/static/images/personal/vip-card-bg.png"></image>
+			<view class="b-btn">立即开通</view>
+			<view class="tit">
+				<!-- 会员图标 -->
+				<text class="iconfont icon-huiyuan-"></text>
+				vip会员
+			</view>
+			<text class="e-m">网抑云音乐</text>
+			<text class="e-b">开通会员听歌，撸代码</text>
+		</view>
+	</view>
+
+	<view class="cover-container">
+		<!--  -->
+		<image class="arc" src="/static/images/personal/arc.png"></image>
+		<!-- 个人中心导航 -->
+		<view class="nav-section">
+			<view class="nav-item" hover-class="common-hover" hover-stay-time="50">
+				<text class="iconfont icon-xiaoxi"></text>
+				<text>我的消息</text>
+			</view>
+			<view class="nav-item" hover-class="common-hover" hover-stay-time="50">
+				<text class="iconfont icon-myRecommender"></text>
+				<text>我的好友</text>
+			</view>
+			<view class="nav-item" hover-class="common-hover" hover-stay-time="50">
+				<text class="iconfont icon-gerenzhuye"></text>
+				<text>个人主页</text>
+			</view>
+			<view class="nav-item" hover-class="common-hover" hover-stay-time="50">
+				<text class="iconfont icon-gexingzhuangban"></text>
+				<text>个性装扮</text>
+			</view>
+		</view>
+
+		<!-- 个人中心列表 -->
+		<view class="personalContent">
+			<view class="recentPlayContainer">
+				<text class="title">最近播放</text>
+				<!-- 最近播放记录 -->
+				<scroll-view class="recentScroll" scroll-x enable-flex wx:if="{{recentPlayList.length}}">
+          <view class="recentItem" wx:for="{{recentPlayList}}" wx:key="id">
+            <image src="{{item.song.al.picUrl}}" />
+          </view>
+				</scroll-view>
+				<view wx:else>
+					暂无播放记录
+				</view>
+
+
+			</view>
+
+			<view class="cardList">
+				<view class="card-item">
+					<text class="title">我的音乐</text>
+					<text class="more"> > </text>
+				</view>
+				<view class="card-item">
+					<text class="title">我的收藏</text>
+					<text class="more"> > </text>
+				</view>
+				<view class="card-item">
+					<text class="title">我的电台</text>
+					<text class="more"> > </text>
+				</view>
+			</view>
+		</view>
+	</view>
 </view>
