--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -24,7 +24,13 @@
 		</view>
 	</view>
 
-	<view class="cover-container">
+	<view 
+    class="cover-container"
+    bindtouchstart="handleTouchStart"
+    bindtouchmove="handleTouchMove"
+    bindtouchend="handleTouchEnd"
+    style="transform: {{coverTransform}}; transition: {{coverTransition}}"
+  >
 		<!--  -->
 		<image class="arc" src="/static/images/personal/arc.png"></image>
 		<!-- 个人中心导航 -->
