--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -100,7 +100,7 @@
 }
 
 .cover-container {
-  border: 1px solid red ;
+  /* border: 1px solid red ; */
   margin-top: -150rpx;
   padding: 0 30rpx;
   background: #f5f5f5;
