feat(songdetail): 歌曲详情

--- a/songPackage/pages/recommendSong/recommendSong.wxml
+++ b/songPackage/pages/recommendSong/recommendSong.wxml
@@ -16,7 +16,7 @@
     </view>
     <!-- 内容区域 -->
     <scroll-view scroll-y="true" class="listScroll">
-      <view class="scrollItem" wx:for="{{recommendList}}" wx:key="id">
+      <view class="scrollItem" wx:for="{{recommendList}}" wx:key="id" data-index="{{index}}" data-song="{{item}}" bindtap="toSongDetail">
         <image src="{{item.album.picUrl}}" />
         <view class="musicInfo">
           <text class="musicName">{{item.name}}</text>
