--- a/songPackage/pages/songDetail/songDetail.wxml
+++ b/songPackage/pages/songDetail/songDetail.wxml
@@ -1,2 +1,32 @@
-<!--songPackage/pages/songDetail/songDetail.wxml-->
-<text>songPackage/pages/songDetail/songDetail.wxml</text>
+<!-- songPackage/pages/songDetail/songDetail.wxml -->
+<view class="songDetailContainer">
+
+  <view class="autor">{{song.ar[0].name}}</view>
+  <view class="circle"></view>
+  <image class="needle {{isPlay && 'needleRotate'}}" src="/static/images/song/needle.png"></image>
+  <view class="discContainer">
+    <image class="disc" src="/static/images/song/disc.png"></image>
+    <image class="musicImg" src="{{song.al.picUrl}}"></image>
+  </view>
+
+  <!-- 进度条控制区域 -->
+  <view class="progressControl">
+    <text>{{currentTime}}</text>
+    <!-- 总进度条 -->
+    <view class="barControl">
+      <!-- 实时进度条 -->
+      <view class="audio-currentTime-Bar" style="width: {{currentWidth + 'rpx'}}">
+        <view class="audio-circle"></view>
+      </view>
+    </view>
+    <text>{{durationTime}}</text>
+    <!-- 底部控制播放区域 -->
+    <view class="musicControl">
+      <text class="iconfont icon-iconsMusicyemianbofangmoshiShuffle"></text>
+      <text class="iconfont icon-shangyishou"></text>
+      <text class="iconfont {{isPlay?'icon-zanting':'icon-bofang'}} big" bindtap="handleMusicPlay"></text>
+      <text class="iconfont icon-next"></text>
+      <text class="iconfont icon-iconsMusicyemianbofangmoshiPlayList"></text>
+    </view>
+  </view>
+</view>
