feat(songdetail): 完成音乐详情页面

--- a/songPackage/pages/songDetail/songDetail.wxml
+++ b/songPackage/pages/songDetail/songDetail.wxml
@@ -4,7 +4,7 @@
   <view class="autor">{{song.ar[0].name}}</view>
   <view class="circle"></view>
   <image class="needle {{isPlay && 'needleRotate'}}" src="/static/images/song/needle.png"></image>
-  <view class="discContainer">
+  <view class="discContainer {{isPlay && 'discAnimation'}}">
     <image class="disc" src="/static/images/song/disc.png"></image>
     <image class="musicImg" src="{{song.al.picUrl}}"></image>
   </view>
@@ -23,9 +23,9 @@
     <!-- 底部控制播放区域 -->
     <view class="musicControl">
       <text class="iconfont icon-iconsMusicyemianbofangmoshiShuffle"></text>
-      <text class="iconfont icon-shangyishou"></text>
+      <text class="iconfont icon-shangyishou" id="pre" bindtap="handleSwitch"></text>
       <text class="iconfont {{isPlay?'icon-zanting':'icon-bofang'}} big" bindtap="handleMusicPlay"></text>
-      <text class="iconfont icon-next"></text>
+      <text class="iconfont icon-next" id="next" bindtap="handleSwitch"></text>
       <text class="iconfont icon-iconsMusicyemianbofangmoshiPlayList"></text>
     </view>
   </view>
