--- a/songPackage/pages/songDetail/songDetail.wxss
+++ b/songPackage/pages/songDetail/songDetail.wxss
@@ -34,6 +34,7 @@ page {
   height: 274rpx;
   transform-origin: 40rpx 0;
   transform: rotate(-20deg);
+  transition: transform 1s;
 }
 
 .needleRotate {
@@ -47,6 +48,20 @@ page {
   width: 598rpx;
   height: 598rpx;
 }
+
+.discAnimation {
+  animation: disc 4s linear infinite;
+}
+
+@keyframes disc {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 
 .disc {
   width: 598rpx;
